correccion de los links

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			          <div class="card-body">
 			             <h5 class="card-title">Proyecto 1</h5>
 			              <p class="card-text">Este proyecto es únicamente ilustrativo con efectos de demostrar las habilidades con las que cuento.</p>
-			              <a href="file:///C:/Users/Edgardo/Desktop/portafolio/proyecto01/index.html" target="_blank" class="btn btn-primary">Ver proyecto</a>
+			              <a href="https://edgardoa13.github.io/proyecto01/" target="_blank" class="btn btn-primary">Ver proyecto</a>
 			          </div>
 					</div>
 				</article>
@@ -144,7 +144,7 @@
 			          <div class="card-body">
 			             <h5 class="card-title">Proyecto 2</h5>
 			             <p class="card-text">Este proyecto es únicamente ilustrativo con efectos de demostrar las habilidades con las que cuento.</p>
-			             <a href="C:\Users\Edgardo\Desktop\portafolio\proyecto02\index.html" target="_blank" class="btn btn-primary">Ver proyecto</a>
+			             <a href="https://edgardoa13.github.io/proyecto02/" target="_blank" class="btn btn-primary">Ver proyecto</a>
 			          </div>
 					</div>
 				</article>
