correcion link proyecto 03

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			          <div class="card-body">
 			            <h5 class="card-title">Proyecto 3</h5>
 			             <p class="card-text">Este proyecto es únicamente ilustrativo con efectos de demostrar las habilidades con las que cuento.</p>
-			             <a href="https://fiber-templates.cleverapps.io/" target="_blank" class="btn btn-primary">Ver proyecto</a>
+			             <a href="https://edgardoa13.github.io/Templates/" target="_blank" class="btn btn-primary">Ver proyecto</a>
 			          </div>
 					</div>
 				</article>
